package cipestudio.enums;

public enum BookStatus {
    DRAFT,
    PUBLISHED,
    ARCHIVED
}
