package cipestudio.enums;

public enum GameType {
    DIGITAL_LOCK,
    FILL_BLANKS,
    QUIZ,
    MEMORY
}
