package cipestudio.enums;

public enum ReportReason {
    VIOLENCE,
    CONTENU_INAPPROPRIE,
    LANGAGE_OFFENSANT,
    HARCELEMENT,
    AUTRE
}
