package cipestudio.enums;

public enum ReportStatus {
    PENDING,
    DONE,
    REJECT
}
