package cipestudio.enums;

public enum Role {
    AUTEUR,
    EDITEUR,
    ENFANT,
    ADMIN
}
